# survey_application

./: .env.example  .gitignore  .htaccess  CPANEL_DEPLOYMENT_MYSQL.md  MYSQL_CONFIGURATION_SUMMARY.md  PATH_REFACTORING.md  QUESTION_FORM_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  database_config.py  deploy_production.sh  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt  test_question_form.py  test_sections.py
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
forms/: admin.py  forms.py  models.py  urls.py  views.py
forms/migrations/: 0001_initial.py  0002_form_form_image_form_password_form_require_captcha_and_more.py  0003_formmasterdataattachment_hidden_columns.py  0004_add_display_column_to_attachment.py  0005_add_filter_columns_to_attachment.py  0006_formsection_formquestion_section.py
forms/templatetags/: form_extras.py
master_data/: admin.py  models.py  urls.py  views.py
master_data/migrations/: 0001_initial.py
master_data/templatetags/: master_data_extras.py
responses/: admin.py  models.py  urls.py  views.py
responses/migrations/: 0001_initial.py  0002_add_new_identity_fields.py  0003_response_is_new_identity_response_new_identity_data_and_more.py
static/css/: input.css  parish-theme.css
static/images/: .gitkeep
survey_project/: settings.py  settings_production.py  urls.py  views.py
templates/: base.html  home.html
templates/accounts/: index.html  login.html  profile.html  register.html
templates/forms/: create.html  delete_confirm.html  detail.html  edit.html  list.html  (+8 more)
(+20 files in other folders)
