[project]
name = "survey-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "django-ratelimit>=4.1.0",
    "django-simple-captcha>=0.6.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
    "qrcode[pil]>=8.2",
]
